--- a/client/src/components/Hero/Hero.module.css
+++ b/client/src/components/Hero/Hero.module.css
@@ -3,6 +3,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-around;
+  transform: translateY(95px);
 }
 .heroQuotes {
   background-color: var(--primaryRedColor);
@@ -53,6 +54,7 @@
 .superpowers {
   position: relative;
   display: flex;
+  flex-direction: column;
   gap: 20px;
   padding-left: 30px;
 }
@@ -60,7 +62,8 @@
   content: '';
   position: absolute;
   left: 0px;
-  top: 25%;
+  top: 15px;
+
   transform: translateY(-50%);
   width: 21px;
   height: 21px;
@@ -69,6 +72,7 @@
   background-repeat: no-repeat;
 }
 .superpowersTitle {
+  color: var(--warningColor);
   min-width: 20%;
 }
 .heroCommonInfo {
@@ -77,7 +81,7 @@
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: auto auto;
-  gap: 15px;
+  gap: 30px;
 }
 .heroCommonInfo li {
   position: relative;
@@ -87,8 +91,7 @@
   content: '';
   position: absolute;
   left: -30px;
-  top: 50%;
-  transform: translateY(-50%);
+  top: 7px;
   width: 21px;
   height: 21px;
   background-image: url('../../assets/other/superhero-svgrepo-com.svg');
@@ -96,16 +99,30 @@
   background-repeat: no-repeat;
 }
 .imagesList {
-  max-height: 200px;
   width: 80%;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   gap: 15px;
 }
+
 .imagesListItem {
-  height: 100px;
-  width: 100px;
-  /* object-fit: contain;
-  object-position: top center; */
+  max-height: 250px;
+  object-fit: contain;
+  object-position: top center;
+}
+@media screen and (min-width: 768px) {
+  .hero {
+    transform: translateY(0);
+  }
+  .imagesList {
+    height: 100%;
+    overflow-y: auto;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: auto;
+  }
+  .superpowers {
+    flex-direction: row;
+  }
 }
