--- a/client/src/components/Lib/Lib.module.css
+++ b/client/src/components/Lib/Lib.module.css
@@ -3,42 +3,17 @@ main {
 }
 .libList {
   width: 100%;
-  display: grid;
-  grid-template-columns: 2fr 1fr 2fr;
-  grid-template-rows: auto auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
   gap: 30px;
+  padding-bottom: 30px;
 }
 .noHeroesTitle {
   text-align: center;
   font-weight: 700;
 }
-.libListItem:nth-child(1) {
-  grid-column: 1;
-  display: flex;
-  justify-content: flex-start;
-}
-.libListItem:nth-child(2) {
-  grid-column: 2;
-}
-.libListItem:nth-child(3) {
-  grid-column: 3;
-  display: flex;
-  justify-content: flex-end;
-}
-
-.libListItem:nth-child(4) {
-  grid-column: 1;
-  grid-row: 2;
-  display: flex;
-  justify-content: flex-end;
-}
-.libListItem:nth-child(5) {
-  grid-column: 3;
-  grid-row: 2;
-  display: flex;
-  justify-content: flex-start;
-}
-
 .card {
   width: 250px;
   height: 300px;
@@ -82,4 +57,45 @@ main {
 .card:hover .cardImage,
 .card:focus .cardImage {
   transform: scale(1.1);
+}
+
+@media screen and (min-width: 768px) {
+  .libList {
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-template-rows: auto auto auto;
+  }
+}
+@media screen and (min-width: 900px) {
+  .libList {
+    grid-template-columns: 2fr 1fr 2fr;
+    grid-template-rows: auto auto;
+  }
+
+  .libListItem:nth-child(1) {
+    grid-column: 1;
+    display: flex;
+    justify-content: flex-start;
+  }
+  .libListItem:nth-child(2) {
+    grid-column: 2;
+  }
+  .libListItem:nth-child(3) {
+    grid-column: 3;
+    display: flex;
+    justify-content: flex-end;
+  }
+
+  .libListItem:nth-child(4) {
+    grid-column: 1;
+    grid-row: 2;
+    display: flex;
+    justify-content: flex-end;
+  }
+  .libListItem:nth-child(5) {
+    grid-column: 3;
+    grid-row: 2;
+    display: flex;
+    justify-content: flex-start;
+  }
 }
